--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
 	"type": "git",  
-	"url": "git+https://github.com/ufclas/ufclas-syllabus-manager.git",  
+	"url": "git+https://github.com/ufclas/ufclas-syllabus-manager.git"  
   },
   "author": "priscillamc",
   "license": "ISC"
