--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syllabus-manager",
+  "name": "ufclas-syllabus-manager",
   "version": "0.0.0",
   "description": "Syllabus document manager",
   "main": "index.php",
